# ermy

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Untitled Diagram.drawio
editor/: CMakeLists.txt  vcpkg.json
editor/include/: assets_preview_manager.h  compressonator_lib.h  editor_file_utils.h  editor_shader_internal.h  main_window.h  preview_props.h  preview_renderer.h  props.h
editor/include/assets/: AssimpLoader.h  CompressonatorLoader.h  DDSLoader.h  FFMPEGLoader.h  FontLoader.h  KTXLoader.h  OpenImageLoader.h  SoundsLoader.h  asset.h  assets_importer.h  assets_loader.h  font_asset.h  geometry_asset.h  sound_asset.h  texture_asset.h  video_asset.h
editor/include/project/: eproject.h  shader_info.h
editor/include/screens/: assets_browser_screen.h  editor_screen.h  hierarchy_screen.cpp  hierarchy_screen.h  property_editor_screen.h
editor/include/shader_compiler/: shader_compiler.h
editor/src/: compressonator_lib.cpp  editor.slang  editor_file_utils.cpp  editor_main.cpp  main_window.cpp  preview_renderer.cpp
editor/src/assets/: AssimpLoader.cpp  CompressonatorLoader.cpp  DDSLoader.cpp  FFMPEGLoader.cpp  FontLoader.cpp  KTXLoader.cpp  OpenImageLoader.cpp  SoundsLoader.cpp  asset.cpp  asset_data.h  assets_importer.cpp  assets_loader.cpp  font_asset.cpp  geometry_asset.cpp  sound_asset.cpp  texture_asset.cpp  texture_names.cpp  video_asset.cpp
editor/src/project/: eproject.cpp
editor/src/screens/: assets_browser_screen.cpp  editor_screen.cpp  hierarchy_screen.cpp  property_editor_screen.cpp
editor/src/shader_compiler/: shader_compiler.cpp
editor/src/shaders/: dxil.cpp  editor.slang  spirv.cpp
engine/: CMakeLists.txt
engine/include/: ermy.h  ermy_api.h  ermy_application.h  ermy_canvas.h  ermy_commandlist.h  ermy_entry_point.h  ermy_font.h  ermy_geometry.h  ermy_input.h  ermy_log.h  ermy_mapped_reader.h  ermy_mapped_writer.h  ermy_os_utils.h  ermy_pak.h  ermy_profiler.h  ermy_rendering.h  ermy_scene.h  ermy_shader.h  ermy_shader_internal.h  ermy_sound.h  ermy_utils.h  ermy_xr.h
engine/src/: application.cpp  application.h  ermy.cpp  ermy_file_utils.cpp  ermy_hash_utils.cpp  ermy_image_utils.cpp  ermy_math_utils.cpp  ermy_string_utils.cpp  ermy_utils_math.cpp  geometry.cpp  logger.cpp  logger.h  pak.cpp  pak.h  profiler.cpp  profiler.h  static_constraints.cpp
engine/src/graphics/: canvas.cpp  canvas.h  canvas_interface.cpp  canvas_interface.h  font_interface.cpp  font_interface.h
engine/src/imgui/: ermy_imgui.cpp  ermy_imgui.h  imgui_interface.cpp  imgui_interface.h
engine/src/os/: ermy_os.h  ermy_os_utils.h  os.h  os_utils.h
engine/src/os/android/: android_entry_point.cpp  android_utils.cpp  android_utils.h  android_window.cpp
engine/src/os/emscripten/: emscripten_entry_point.cpp  emscripten_utils.cpp  emscripten_utils.h  emscripten_window.cpp
engine/src/os/windows/: win_entry_point.cpp  win_gamepads.h  win_utils.cpp  win_utils.h  win_window.cpp
engine/src/rendering/: format_names.cpp  framegraph.cpp  framegraph.h  framegraph_interface.h  rendering.cpp  rendering.h  rendering_interface.h  swapchain_interface.cpp  swapchain_interface.h
engine/src/rendering/d3d12/: d3d12_commandlist.cpp  d3d12_framegraph_interface.cpp  d3d12_interface.cpp  d3d12_interface.h  d3d12_rendering.cpp  d3d12_rendering.h  d3d12_swapchain.cpp  d3d12_swapchain.h
engine/src/rendering/internal_shaders/: dxil.cpp  ermy_base.slang  ermy_engine.slang  internal.slang  spirv.cpp
engine/src/rendering/vulkan/: VulkanRenderPass.h  ermy_vulkan.cpp  ermy_vulkan.h  vk_utils.cpp  vk_utils.h  vulkan_commandlist.cpp  vulkan_framegraph_interface.cpp  vulkan_interface.cpp  vulkan_interface.h  vulkan_rendering.cpp  vulkan_rendering.h  vulkan_swapchain.cpp  vulkan_swapchain.h
engine/src/rendering/webgpu/: webgpu_interface.cpp  webgpu_interface.h
engine/src/scene/: scene.cpp  scene.h
engine/src/sound/: sound_interface.cpp  sound_interface.h  sound_interface_miniaudio.cpp
engine/src/xr/: xr.h  xr_interface.h
engine/src/xr/openxr/: ermy_openxr.cpp  ermy_openxr.h  openxr_interface.cpp  openxr_interface.h
eproj_template/: .gitignore  assets_cache - Copy (2).xml  assets_cache - Copy.xml  assets_cache.xml - Shortcut.lnk  project.eproj
eproj_template/assets/: superJpeg.j2k
eproj_template/assets/shaders/: ermy_engine.slang
eproj_template/paks/: 0.epak
eproj_template/shaders/: ermy_base.slang  internal.slang
include/: ermy.h  ermy_api.h
solutions/VisualStudio/: editor.vcxproj  editor.vcxproj.filters  ermy.sln  ermy.vcxproj  ermy.vcxproj.filters  imgui.ini  testbed.vcxproj  testbed.vcxproj.filters  testbed_xr.vcxproj  testbed_xr.vcxproj.filters  vcpkg.json
solutions/VisualStudio/AndroidPackaging/.agde/: agde.gradle
solutions/VisualStudio/AndroidPackaging/app/: build.gradle
solutions/VisualStudio/AndroidPackaging/app/src/androidTest/java/com/hexcelltechvr/ermy/testbed/: ExampleInstrumentedTest.java
solutions/VisualStudio/AndroidPackaging/app/src/main/: AndroidManifest.xml
solutions/VisualStudio/AndroidPackaging/app/src/main/cpp/: JniBindings.cpp
solutions/VisualStudio/AndroidPackaging/app/src/main/java/com/hexcelltechvr/ermy/testbed/: MainActivity.java
solutions/VisualStudio/AndroidPackaging/app/src/test/java/com/hexcelltechvr/ermy/testbed/: ExampleUnitTest.java
solutions/VisualStudio/AndroidPackagingTestBedXR/.agde/: agde.gradle
solutions/VisualStudio/AndroidPackagingTestBedXR/app/: build.gradle
solutions/VisualStudio/AndroidPackagingTestBedXR/app/src/main/: AndroidManifest.xml
solutions/VisualStudio/AndroidPackagingTestBedXR/app/src/main/cpp/: JniBindings.cpp
solutions/VisualStudio/AndroidPackagingTestBedXR/app/src/main/res/values/: strings.xml
solutions/VisualStudio/ermy/x64/Debug/ermy.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  ermy.lastbuildstate
source/: ermy.cpp
source/editor/: editor.cpp
testbed/: CMakeLists.txt  testbed.cpp
testbed_xr/: testbed_xr.cpp
(+3 files in other folders)
